@@ -27,7 +27,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.inject.Inject;
@@ -127,7 +126,7 @@ public class LiveDataRendererConfiguration
         if (properties == null) {
             return null;
         } else {
-            return getSplitStringStream(properties).collect(Collectors.toList());
+            return getSplitStringStream(properties).toList();
         }
     }
 
@@ -157,7 +156,7 @@ public class LiveDataRendererConfiguration
             return getSplitStringStream(sort)
                 .filter(StringUtils::isNotEmpty)
                 .map(this::getSortEntry)
-                .collect(Collectors.toList());
+                .toList();
         }
     }
 
@@ -177,7 +176,7 @@ public class LiveDataRendererConfiguration
     {
         List<LiveDataQuery.Filter> filters =
             getURLParameters('?' + StringUtils.defaultString(filtersString)).entrySet().stream()
-                .map(this::getFilter).collect(Collectors.toList());
+                .map(this::getFilter).toList();
         return filters.isEmpty() ? null : filters;
     }
 
@@ -186,7 +185,7 @@ public class LiveDataRendererConfiguration
         LiveDataQuery.Filter filter = new LiveDataQuery.Filter();
         filter.setProperty(entry.getKey());
         filter.getConstraints()
-            .addAll(entry.getValue().stream().map(LiveDataQuery.Constraint::new).collect(Collectors.toList()));
+            .addAll(entry.getValue().stream().map(LiveDataQuery.Constraint::new).toList());
         return filter;
     }
 
@@ -214,7 +213,7 @@ public class LiveDataRendererConfiguration
         } else {
             return getSplitStringStream(parameters.getLayouts())
                 .map(LiveDataLayoutDescriptor::new)
-                .collect(Collectors.toList());
+                .toList();
         }
     }
 
@@ -225,7 +224,7 @@ public class LiveDataRendererConfiguration
         if (parameters.getPageSizes() != null) {
             pagination.setPageSizes(getSplitStringStream(parameters.getPageSizes())
                 .map(Integer::parseInt)
-                .collect(Collectors.toList()));
+                .toList());
         }
         return pagination;
     }
