@@ -23,7 +23,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.inject.Inject;
@@ -91,8 +90,8 @@ public class DefaultQuoteService implements QuoteService
         public boolean match(Block block)
         {
             boolean ret;
-            if (block instanceof MacroBlock) {
-                ret = "mention".equals(((MacroBlock) block).getId())
+            if (block instanceof MacroBlock macroBlock) {
+                ret = "mention".equals(macroBlock.getId())
                     && Objects.equals(Objects.toString(block.getParameter("anchor"), ""), this.anchorId);
             } else {
                 ret = false;
@@ -114,7 +113,7 @@ public class DefaultQuoteService implements QuoteService
                 block = new ParagraphBlock(
                     Stream.of(mentionBlock.getPreviousSibling(), mentionBlock, mentionBlock.getNextSibling())
                         .filter(Objects::nonNull)
-                        .collect(Collectors.toList())
+                        .toList()
                 );
             } else {
                 block = parent;
