@@ -21,7 +21,6 @@ package org.xwiki.notifications.sources.internal;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.inject.Inject;
 import javax.inject.Singleton;
@@ -95,7 +94,7 @@ public class EventSearcher
 
         // Get a batch of events
         try (EventSearchResult result = this.eventStore.search(query)) {
-            return result.stream().collect(Collectors.toList());
+            return result.stream().toList();
         } catch (Exception e) {
             throw new EventStreamException("Failed to close the event search result", e);
         }
