@@ -21,7 +21,6 @@ package org.xwiki.notifications.sources.internal;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.inject.Inject;
 import javax.inject.Named;
@@ -96,7 +95,7 @@ public class TagNotificationFilter implements NotificationFilter
         List<String> enabledTags = filterPreferences.stream()
                 .filter(nfp -> nfp instanceof TagNotificationFilterPreference && nfp.isEnabled())
                 .map(nfp -> ((TagNotificationFilterPreference) nfp).getTag().toLowerCase())
-                .collect(Collectors.toList());
+                .toList();
 
         if (enabledTags.isEmpty()) {
             return null;
@@ -120,7 +119,7 @@ public class TagNotificationFilter implements NotificationFilter
             return value(EventProperty.PAGE).inStrings(pagesHoldingTags)
                     .and(value(EventProperty.WIKI).eq(value(currentWiki)));
         } catch (QueryException e) {
-            logger.warn("Failed to get the list of documents holding some tags.", e);
+            logger.warn("Failed to get the list of documents holding some tags", e);
             return null;
         }
     }
@@ -128,8 +127,7 @@ public class TagNotificationFilter implements NotificationFilter
     private String findCurrentWiki(Collection<NotificationFilterPreference> filterPreferences)
     {
         for (NotificationFilterPreference nfp : filterPreferences) {
-            if (nfp.isEnabled() && nfp instanceof TagNotificationFilterPreference) {
-                TagNotificationFilterPreference pref = (TagNotificationFilterPreference) nfp;
+            if (nfp.isEnabled() && nfp instanceof TagNotificationFilterPreference pref) {
                 return pref.getCurrentWiki();
             }
         }
